add_definitions(-DSTATICLIB)

include_directories(${CMAKE_SOURCE_DIR}/external/cxxopts)
include_directories(${CMAKE_SOURCE_DIR}/external/argon2/include)


file(GLOB_RECURSE BlockchainExplorer BlockchainExplorer/*)
file(GLOB_RECURSE Common Common/*)
file(GLOB_RECURSE Config Config/*)
file(GLOB_RECURSE Crypto crypto/*)
file(GLOB_RECURSE CryptoNoteCore CryptoNoteCore/* CryptoNoteConfig.h)
file(GLOB_RECURSE CryptoNoteProtocol CryptoNoteProtocol/*)
file(GLOB_RECURSE CryptoTest CryptoTest/*)
file(GLOB_RECURSE Http HTTP/*)
file(GLOB_RECURSE InProcessNode InProcessNode/*)
file(GLOB_RECURSE Logging Logging/*)
file(GLOB_RECURSE NodeRpcProxy NodeRpcProxy/*)
file(GLOB_RECURSE P2p P2p/*)
file(GLOB_RECURSE Rpc Rpc/*)
file(GLOB_RECURSE Mnemonics Mnemonics/*)
file(GLOB_RECURSE Serialization Serialization/*)
file(GLOB_RECURSE Transfers Transfers/*)
file(GLOB_RECURSE PaymentGate PaymentGate/*)
file(GLOB_RECURSE Wallet Wallet/*)
file(GLOB_RECURSE WalletLegacy WalletLegacy/*)
file(GLOB_RECURSE JsonRpcServer JsonRpcServer/*)

file(GLOB_RECURSE Daemon Daemon/*)
file(GLOB_RECURSE SimpleWallet SimpleWallet/*)
file(GLOB_RECURSE PaymentGateService PaymentGateService/*)
file(GLOB_RECURSE ConnectivityTool ConnectivityTool/*)
file(GLOB_RECURSE Miner Miner/*)

if(MSVC)
  file(GLOB_RECURSE System System/* Platform/Windows/System/*)
elseif(APPLE)
  file(GLOB_RECURSE System System/* Platform/OSX/System/* Platform/Posix/System/*)
elseif(FREEBSD)
  file(GLOB_RECURSE System System/* Platform/FreeBSD/System/* Platform/Posix/System/*)
elseif(ANDROID)
  file(GLOB_RECURSE System System/* Platform/Android/System/* Platform/Posix/System/*)
else()
  file(GLOB_RECURSE System System/* Platform/Linux/System/* Platform/Posix/System/*)
endif()


source_group("" FILES ${Common} ${Config} ${ConnectivityTool} ${Crypto} ${CryptoNoteCore} ${CryptoNoteProtocol} ${Daemon} ${JsonRpcServer} ${Http} ${Logging} ${NodeRpcProxy} ${P2p} ${Rpc} ${Serialization} ${SimpleWallet} ${System} ${Transfers} ${Wallet} ${WalletLegacy} ${Mnemonics}  ${CryptoTest})

add_library(BlockchainExplorer STATIC ${BlockchainExplorer})
add_library(Common STATIC ${Common})
add_library(Config STATIC ${Config})
add_library(Crypto STATIC ${Crypto})
add_library(CryptoNoteCore STATIC ${CryptoNoteCore})
add_library(CryptoNoteProtocol STATIC ${CryptoNoteProtocol})
add_library(Http STATIC ${Http})
add_library(InProcessNode STATIC ${InProcessNode})
add_library(Logging STATIC ${Logging})
add_library(NodeRpcProxy STATIC ${NodeRpcProxy})
add_library(Rpc STATIC ${Rpc})
add_library(P2P STATIC ${CryptoNoteProtocol} ${P2p})
add_library(Serialization STATIC ${Serialization})
add_library(System STATIC ${System})
add_library(WalletLegacy STATIC ${WalletLegacy})
add_library(Transfers STATIC ${Transfers})
add_library(Wallet STATIC ${Wallet}  ${WalletLegacy})
add_library(PaymentGate STATIC ${PaymentGate})
add_library(JsonRpcServer STATIC ${JsonRpcServer})
add_library(Mnemonics STATIC ${Mnemonics})

add_executable(Daemon             ${Daemon}            )
add_executable(SimpleWallet       ${SimpleWallet}      )
add_executable(PaymentGateService ${PaymentGateService})
add_executable(Miner              ${Miner}             )
add_executable(ConnectivityTool   ${ConnectivityTool}  )
add_executable(CryptoTest         ${CryptoTest}        )

target_link_libraries(Common)
target_link_libraries(Crypto argon2)
target_link_libraries(CryptoNoteCore Common Logging Crypto P2P Rpc Http Serialization System ${Boost_LIBRARIES})
target_link_libraries(Logging Common)
target_link_libraries(NodeRpcProxy Rpc)
target_link_libraries(P2P upnpc-static Serialization)
target_link_libraries(Rpc P2P CryptoNoteCore)
target_link_libraries(Serialization Common Crypto ${Boost_LIBRARIES})
target_link_libraries(Transfers CryptoNoteCore)
target_link_libraries(Wallet WalletLegacy Transfers NodeRpcProxy CryptoNoteCore Common ${Boost_LIBRARIES})
target_link_libraries(Daemon Rpc Config CryptoNoteCore CryptoNoteProtocol Logging P2P System Http Common Crypto BlockchainExplorer ${Boost_LIBRARIES})
target_link_libraries(SimpleWallet Common CryptoNoteCore Wallet NodeRpcProxy Transfers  Serialization Mnemonics ${Boost_LIBRARIES})
target_link_libraries(PaymentGateService PaymentGate Wallet WalletLegacy NodeRpcProxy P2P Serialization InProcessNode JsonRpcServer NodeRpcProxy BlockchainExplorer ${Boost_LIBRARIES})
target_link_libraries(Miner Crypto Common CryptoNoteCore ${Boost_LIBRARIES})
target_link_libraries(ConnectivityTool Crypto Common CryptoNoteCore ${Boost_LIBRARIES})
target_link_libraries(CryptoTest Crypto Common ${Boost_LIBRARIES})

if (MSVC)
  target_link_libraries(System ws2_32)
  target_link_libraries(Daemon Rpcrt4)
  target_link_libraries(SimpleWallet Rpcrt4)
  target_link_libraries(PaymentGateService Rpcrt4)
else()
  target_link_libraries(Daemon ${EXTRA_LIBRARIES})
  target_link_libraries(SimpleWallet ${EXTRA_LIBRARIES})
  target_link_libraries(PaymentGateService ${EXTRA_LIBRARIES})
  target_link_libraries(Miner ${EXTRA_LIBRARIES})
endif()

if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux" OR APPLE AND NOT ANDROID)
  target_link_libraries(SimpleWallet -lresolv)
  target_link_libraries(Daemon -lresolv)
  target_link_libraries(PaymentGateService -lresolv)
  target_link_libraries(Miner -lresolv)
endif()

if (FREEBSD)
  target_link_libraries(SimpleWallet -lthr)
  target_link_libraries(Daemon -lthr)
  target_link_libraries(PaymentGateService -lthr)
  target_link_libraries(Miner -lthr)
endif()

add_dependencies(Rpc                version)
add_dependencies(P2P                version)
add_dependencies(Daemon             version)
add_dependencies(SimpleWallet       version)
add_dependencies(PaymentGateService version)
add_dependencies(CryptoTest         version)


set_property(TARGET Daemon             PROPERTY OUTPUT_NAME "adond")
set_property(TARGET SimpleWallet       PROPERTY OUTPUT_NAME "simplewallet")
set_property(TARGET PaymentGateService PROPERTY OUTPUT_NAME "walletd")
set_property(TARGET Miner              PROPERTY OUTPUT_NAME "miner")
set_property(TARGET ConnectivityTool   PROPERTY OUTPUT_NAME "connectivity_tool")
set_property(TARGET CryptoTest         PROPERTY OUTPUT_NAME "cryptotest")

